<package>
  <name>strands_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     strands_flexbe_states provides a collection of states developed for the STRANDS project software.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <run_depend>cloud_merge</run_depend>

</package>
